--- a/EstateManagement.EstateAggregate/EstateManagement.EstateAggregate.csproj
+++ b/EstateManagement.EstateAggregate/EstateManagement.EstateAggregate.csproj
@@ -1,12 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared" Version="0.0.1" />
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="0.0.1" />
+    <PackageReference Include="Shared" Version="0.0.2" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="0.0.2" />
+    <PackageReference Include="Shared.EventStore" Version="0.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EstateManagement.Estate.DomainEvents\EstateManagement.Estate.DomainEvents.csproj" />
   </ItemGroup>
 
 </Project>
