--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -115,6 +115,11 @@ jobs:
         --deploymenttimeout 00:05:00
         --releasenotes "${{ steps.buildreleasenotes.outputs.releasenote }}" 
     
+    - name: Setup .NET Core 3.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.0.100
+        
     - name: Build and Publish Nuget Packages
       run: |
         dotnet pack "EstateManagement.Client\EstateManagement.Client.csproj" /p:PackageVersion=${{ steps.get_version.outputs.VERSION }} --output Nugets
