--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -35,6 +35,8 @@ jobs:
         
     - name: Upload Code Coverage
       uses: codecov/codecov-action@v1.0.3
+      with:
+          token: ${{secrets.CODECOV_TOKEN}} #required
               
     - name: Build Docker Image
       run: docker build . --file EstateManagement/Dockerfile --tag estatemanagement:latest
