--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -9,8 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared" Version="0.0.3.1" />
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="0.0.3.1" />
+    <PackageReference Include="Shared" Version="0.0.4.1" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="0.0.4.1" />
   </ItemGroup>
 
   <ItemGroup>
