--- a/EstateManagement/EstateManagement.csproj
+++ b/EstateManagement/EstateManagement.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Lamar.Diagnostics" Version="1.1.2" />
-    <PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="4.0.2" />
+    <!--<PackageReference Include="Lamar.Diagnostics" Version="1.1.2" />
+    <PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="4.0.2" />-->
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.0.0-preview8.19405.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.0.0-preview8.19405.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
