--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -13,9 +13,13 @@
     "START_PROJECTIONS": false,
     "ContinuousProjectionsFolder": ""
   },
+  "ConnectionStrings": {
+    "ConnectionStringConfiguration": "server=localhost;database=ConnectionStringConfiguration;user id=sa;password=sp1ttal"
+  },
   "AppSettings": {
     "HandlerEventTypesToSilentlyHandle": {
-    }
+    },
+    "UseConnectionStringConfig": false 
   },
   "AllowedHosts": "*"
   }
