--- a/EstateManagement.EstateAggregate/EstateManagement.EstateAggregate.csproj
+++ b/EstateManagement.EstateAggregate/EstateManagement.EstateAggregate.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EstateManagement.Estate.DomainEvents\EstateManagement.Estate.DomainEvents.csproj" />
+    <ProjectReference Include="..\EstateManagement.Models\EstateManagement.Models.csproj" />
   </ItemGroup>
 
 </Project>
