--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -39,11 +39,8 @@ jobs:
         dotnet test "EstateManagement.Tests\EstateManagement.Tests.csproj"
         
     - name: Build Docker Images 
-      run: >-
-        docker build . --file EstateManagement/Dockerfile 
-                       --tag estatemanagement:latest 
-                       --tag stuartferguson/estatemanagement:latest 
-                       --tag stuartferguson/estatemanagement:${{ steps.get_version.outputs.VERSION }}         
+      run: |
+        docker build . --file EstateManagement/Dockerfile --tag estatemanagement:latest --tag stuartferguson/estatemanagement:latest --tag stuartferguson/estatemanagement:${{ steps.get_version.outputs.VERSION }}         
 
     - name: Run Integration Tests
       run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj"
