--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -19,7 +19,8 @@
   "AppSettings": {
     "HandlerEventTypesToSilentlyHandle": {
     },
-    "UseConnectionStringConfig": false 
+    "UseConnectionStringConfig": false,
+    "SecurityService": "http://192.168.1.133:5001"
   },
   "AllowedHosts": "*"
   }
